# japan-stock-ai-trader

./: .gitignore  README.md  data.py  main.py  market.py  notify.py  pyproject.toml  screener.py
config/: config.yaml
src/backtest/: backtest.py
src/data/: data.py
src/indicators/: indicators.py
src/learning/: learn.py
src/market/: market.py
src/screener/: screener.py
src/signals/: signal.py
